Bug 121388 - Performance regression enabling automatic update of external links
Summary: Performance regression enabling automatic update of external links
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Dennis Francis
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords: bibisected, bisected, perf, regression
Depends on:
Blocks:
 
Reported: 2018-11-13 13:27 UTC by Xisco Faulí
Modified: 2019-08-19 13:30 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-11-13 13:27:20 UTC
Steps to reproduce:
1. Downlaod attachment 146586 [details] from bug 121386
2. open the Report file
3. enable content to update the links

in 

Version: 6.2.0.0.alpha1+
Build ID: 21b0bd63a41bda1153bb6173ec23ecdd13353999
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

it takes 65 seconds while on

Versió: 6.1.3.2
ID de la construcció: 1:6.1.3~rc2-0ubuntu0.16.04.1
Fils de CPU: 4; SO: Linux 4.15; Renderitzador de la IU: per defecte; VCL: gtk3; 
Configuració local: ca-ES (ca_ES.UTF-8); Calc: group threaded

it takes 3 seconds
Comment 1 Xisco Faulí 2018-11-13 13:29:51 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=12782fc917bcdc1c119bda675fc27f77887498e0

author	Dennis Francis <dennis.francis@collabora.co.uk>	2018-06-12 15:04:04 +0530
committer	Dennis Francis <dennis.francis@collabora.co.uk>	2018-06-21 15:04:11 +0200
commit 12782fc917bcdc1c119bda675fc27f77887498e0 (patch)
tree d0d990355644b71d4d8333fc7ffe5adbf3f1ab2e
parent 6b496d6a0f8b9de38fbf6721796104496d927db3 (diff)
Do dependency computation checks for OpenCL and...

Bisected with: bibisect-linux64-6.2

Adding Cc: to Dennis Francis
Comment 2 Roman Kuznetsov 2018-11-13 13:35:46 UTC
confirm for

Version: 6.2.0.0.alpha1+
Build ID: a20a2d7e0d28658f2d9089da076961a599833a28
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-11-12_22:51:20
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

I got 1 min 53 sec

and in 

Version: 6.1.2.1
Build ID: 65905a128db06ba48db947242809d14d3f9a93fe
CPU threads: 4; OS: Windows 6.1; UI render: default; 
Locale: ru-RU (ru_RU); Calc: group threaded

I got 20 sec
Comment 3 Commit Notification 2019-02-11 09:55:32 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/4aea832ffebefd62e5f9a3b34dca493b21a16bb0%5E%21

tdf#121388 : Disable threading and dep evaluation for IF...

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2019-02-11 16:48:41 UTC
it takes 5 seconds now in

Version: 6.3.0.0.alpha0+
Build ID: c7ad7849d54fd3dad67e7779102f65b8b2f04881
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Dennis Francis, thanks for fixing this issue. Should it be backported to 6-2 branch ?
Comment 5 Dennis Francis 2019-02-12 12:58:01 UTC
(In reply to Xisco Faulí from comment #4)
> it takes 5 seconds now in
> 
> Version: 6.3.0.0.alpha0+
> Build ID: c7ad7849d54fd3dad67e7779102f65b8b2f04881
> CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
> Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
> Calc: threaded
> 
> @Dennis Francis, thanks for fixing this issue. Should it be backported to
> 6-2 branch ?

Yes, I will shortly put a patch for 6-2 but have to do it manually it seems. Thanks.
Comment 6 Commit Notification 2019-02-12 15:09:06 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/34088a9b994f96a69a777a1cf61ab50cf789b9e6%5E%21

tdf#121388 : Disable threading and dep evaluation for IF...

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-02-13 11:39:23 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 6d52cd1c0b7270a512a8e4ea988432fdad3e4385
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Dennis Francis, thanks for fixing this!!