tdf#121388 : Disable threading and dep evaluation for IF...

IFS/SWITCH if the call did not originate from
ScDocShell::DoRecalc()/ScDocShell::DoHardRecalc()

Change-Id: Ifdb3a496276dc841fc42a1bad1876cfb1057baf6